--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="container">
     <!-- Card 1: Main Entry -->
     <div class="card">
+      <h3>USER Display</h3>
       <form class="partsForm" id="form1">
         <label for="employeeName1">Employee Name:</label>
         <select id="employeeName1" name="employeeName" required>
@@ -43,6 +44,7 @@
 
     <!-- Card 2: Add Dropdown Options -->
     <div class="card">
+      <h3>ADMIN Display</h3>
       <form id="addEmployeeForm">
         <label for="employeeName2">Add Employee Name:</label>
         <input type="text" id="employeeName2" name="employeeName">
